Fix alignment of magnifying glass in search input
The magnifying glass icon is now centered vertically without relying on
its absolute size. This ensures proper centering, regardless of the
icon's dimensions.

Resolves #3200.

--- a/root/static/less/search.less
+++ b/root/static/less/search.less
@@ -30,9 +30,10 @@
 .search-group .fa-search {
     color: @input-color;
     font-size: 20px;
-    left: 10px;
+    left: 18px;
     position: absolute;
-    top: 23%;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .navbar-nav .search-form {
